homebridge/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      volumes:
      - name: homebridge-config
        configMap:
          name: homebridge-configmap
          defaultMode: 0711
      - name: homebridge-volume
        persistentVolumeClaim:
          claimName: homebridge-pvc
      hostNetwork: true
      containers:
        - name: homebridge
          volumeMounts:
            - name: homebridge-volume
              mountPath: /homebridge
            - name: homebridge-config
              mountPath: /homebridge/config.json.template
              subPath: config.json
            - name: homebridge-config
              mountPath: /homebridge/auth.json.template
              subPath: auth.json
            - name: homebridge-config
              mountPath: /homebridge/startup.sh
              subPath: startup.sh
          image: oznu/homebridge:2023-01-08
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            allowPrivilegeEscalation: true
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: homebridge
              containerPort: 51221
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
          startupProbe:
            httpGet:
              path: /
              port: 8090
            failureThreshold: 30
            periodSeconds: 10
