homebridge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-ui
spec:
  selector:
    app: homebridge
  ports:
    - name: http
      port: 8090
      targetPort: 8090
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge-api
spec:
  type: NodePort
  selector:
    app: homebridge
  ports:
    - name: api
      port: 51221
      targetPort: 51221
      nodePort: 51221
      protocol: TCP
