homebridge/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homebridge
  namespace: homebridge
spec:
  rules:
    - host: homebridge.raspberrypi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge
                port:
                  name: http
